# soobshestvo_bot

./: .env.example  .gitignore  docker-compose.yaml
alembic_migrations/: alembic.ini  pyproject.toml  sync_dependencies.sh
alembic_migrations/src/core/: config.py  logging.py  utils.py
alembic_migrations/src/services/db/: database.py
alembic_migrations/src/services/db/models/: __init__.py  application.py  base_model.py  invite.py
alembic_migrations/src/services/migrations/: env.py
kernel_bot/: .dockerignore  dockerfile  entrypoint.sh  main.py  pyproject.toml  sync_dependencies.sh
kernel_bot/db/: database.py
kernel_bot/src/: bot.py
kernel_bot/src/core/: config.py  logging.py  utils.py
kernel_bot/src/services/db/: data_access_module.py  database.py
kernel_bot/src/services/db/models/: member.py
kernel_bot/src/services/handlers/: apply.py  approvals.py  join_request.py  look_bio.py  main_handler.py  on_left_member.py  setbio.py
kernel_bot/src/texts/: texts.py
postgres/: dockerfile
