[project]
name = "alembic_migrations"
version = "0.1.0"
requires-python = "==3.13.5"
dependencies = [
    "loguru==0.7.3",
    "colorama==0.4.6",
    "SQLAlchemy==2.0.41",
    "psycopg[binary]==3.2.9",
    "asyncpg==0.30.0",
    "alembic==1.16.4",
    "fastapi==0.116.0",
    "pydantic==2.11.7",
    "chardet==5.2.0",
    "bcrypt==3.2.0",
    "dotenv==0.9.9",
]


