[project]
name = "kernel-bot"
version = "0.1.0"
description = "{ K E R N E L } — Telegram bot (aiogram v3, SQLAlchemy 2.0 async, PostgreSQL)"
readme = "README.md"
authors = [{ name = "{ K E R N E L }" }]
requires-python = ">=3.11"
dependencies = [
"aiogram>=3.6",
"SQLAlchemy[asyncio]>=2.0",
"asyncpg>=0.29",
"python-dotenv>=1.0",
]


[project.optional-dependencies]
dev = [
"mypy>=1.10",
"ruff>=0.6.0",
"pyright>=1.1.377",
"alembic>=1.13",
]