[project]
name = "kernel-bot"
version = "0.1.0"
description = "{ K E R N E L } — Telegram bot (aiogram v3, SQLAlchemy 2.0 async, PostgreSQL)"
readme = "README.md"
authors = [{ name = "{ K E R N E L }" }]
requires-python = ">=3.13.5"

dependencies = [
    "aiogram>=3.6",
    "loguru==0.7.3",
    "colorama==0.4.6",
    "SQLAlchemy==2.0.41",
    "psycopg[binary]==3.2.9",
    "asyncpg==0.30.0",
    "alembic==1.16.4",
    "fastapi==0.116.0",
    "pydantic==2.11.7",
    "chardet==5.2.0",
    "bcrypt==3.2.0",
    "dotenv==0.9.9",
    "python-dotenv>=1.0",
]


[project.optional-dependencies]
dev = [
"mypy>=1.10",
"ruff>=0.6.0",
"pyright>=1.1.377",
"alembic>=1.13",
]


[db]
echo = false
pool_size = 5
max_overflow = 10


